Visualizing changing in latent reconstruction via plotting multiple graphs

--- a/Conv1D_VAE.ipynb
+++ b/Conv1D_VAE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -11,14 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(512000, 4)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500, 1024, 4)\n(11, 1024, 4)\n"
+      "(307200, 4)\n(300, 1024, 4)\n(10, 1024, 4)\n"
      ]
     }
    ],
@@ -35,13 +28,13 @@
     "\n",
     "beta = 1\n",
     "n_features = 4\n",
-    "boat_csv = pd.read_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
+    "boat_csv = pd.read_csv(\"Data/Boat_nominal_data/Boat_nominal_sequences.csv\")\n",
     "boat_csv = boat_csv.drop(columns=[\"Unnamed: 0\", \"M0C\", \"M1C\", \"Acceleration\",\"Speed\"])\n",
     "scaler = StandardScaler()\n",
     "normal_data = scaler.fit_transform(boat_csv)\n",
     "print(normal_data.shape)\n",
     "\n",
-    "boat_val = pd.read_csv(\"Data/Boat_nominal_data/Boat_sequences_mix_val.csv\")\n",
+    "boat_val = pd.read_csv(\"Data/Boat_nominal_data/Boat_sequences_val_nom.csv\")\n",
     "boat_val = boat_val.drop(columns=[\"Unnamed: 0\", \"M0C\", \"M1C\", \"Acceleration\",\"Speed\"])\n",
     "scaler = StandardScaler()\n",
     "val_nom_data = scaler.fit_transform(boat_val)\n",
@@ -70,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -79,14 +72,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__________________________________________________________________________________________________\nLayer (type)                    Output Shape         Param #     Connected to                     \n==================================================================================================\nencoder_input (InputLayer)      (None, 1024, 4)      0                                            \n__________________________________________________________________________________________________\nconv1d_91 (Conv1D)              (None, 1024, 64)     1856        encoder_input[0][0]              \n__________________________________________________________________________________________________\nmax_pooling1d_41 (MaxPooling1D) (None, 512, 64)      0           conv1d_91[0][0]                  \n__________________________________________________________________________________________________\nconv1d_92 (Conv1D)              (None, 512, 32)      14368       max_pooling1d_41[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_42 (MaxPooling1D) (None, 256, 32)      0           conv1d_92[0][0]                  \n__________________________________________________________________________________________________\nconv1d_93 (Conv1D)              (None, 256, 16)      3600        max_pooling1d_42[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_43 (MaxPooling1D) (None, 128, 16)      0           conv1d_93[0][0]                  \n__________________________________________________________________________________________________\nconv1d_94 (Conv1D)              (None, 128, 8)       904         max_pooling1d_43[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_44 (MaxPooling1D) (None, 64, 8)        0           conv1d_94[0][0]                  \n__________________________________________________________________________________________________\nflatten_11 (Flatten)            (None, 512)          0           max_pooling1d_44[0][0]           \n__________________________________________________________________________________________________\nz_mean (Dense)                  (None, 6)            3078        flatten_11[0][0]                 \n__________________________________________________________________________________________________\nz_log_var (Dense)               (None, 6)            3078        flatten_11[0][0]                 \n__________________________________________________________________________________________________\nz (Lambda)                      (None, 6)            0           z_mean[0][0]                     \n                                                                 z_log_var[0][0]                  \n==================================================================================================\nTotal params: 26,884\nTrainable params: 26,884\nNon-trainable params: 0\n__________________________________________________________________________________________________\n"
+      "__________________________________________________________________________________________________\nLayer (type)                    Output Shape         Param #     Connected to                     \n==================================================================================================\nencoder_input (InputLayer)      (None, 1024, 4)      0                                            \n__________________________________________________________________________________________________\nconv1d_55 (Conv1D)              (None, 1024, 64)     1856        encoder_input[0][0]              \n__________________________________________________________________________________________________\nmax_pooling1d_25 (MaxPooling1D) (None, 512, 64)      0           conv1d_55[0][0]                  \n__________________________________________________________________________________________________\nconv1d_56 (Conv1D)              (None, 512, 32)      14368       max_pooling1d_25[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_26 (MaxPooling1D) (None, 256, 32)      0           conv1d_56[0][0]                  \n__________________________________________________________________________________________________\nconv1d_57 (Conv1D)              (None, 256, 16)      3600        max_pooling1d_26[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_27 (MaxPooling1D) (None, 128, 16)      0           conv1d_57[0][0]                  \n__________________________________________________________________________________________________\nconv1d_58 (Conv1D)              (None, 128, 8)       904         max_pooling1d_27[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_28 (MaxPooling1D) (None, 64, 8)        0           conv1d_58[0][0]                  \n__________________________________________________________________________________________________\nflatten_7 (Flatten)             (None, 512)          0           max_pooling1d_28[0][0]           \n__________________________________________________________________________________________________\nz_mean (Dense)                  (None, 6)            3078        flatten_7[0][0]                  \n__________________________________________________________________________________________________\nz_log_var (Dense)               (None, 6)            3078        flatten_7[0][0]                  \n__________________________________________________________________________________________________\nz (Lambda)                      (None, 6)            0           z_mean[0][0]                     \n                                                                 z_log_var[0][0]                  \n==================================================================================================\nTotal params: 26,884\nTrainable params: 26,884\nNon-trainable params: 0\n__________________________________________________________________________________________________\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nz_sampling (InputLayer)      (None, 6)                 0         \n_________________________________________________________________\nDense_after_sampling (Dense) (None, 512)               3584      \n_________________________________________________________________\nreshape_11 (Reshape)         (None, 64, 8)             0         \n_________________________________________________________________\nconv1d_95 (Conv1D)           (None, 64, 8)             456       \n_________________________________________________________________\nup_sampling1d_41 (UpSampling (None, 128, 8)            0         \n_________________________________________________________________\nconv1d_96 (Conv1D)           (None, 128, 16)           912       \n_________________________________________________________________\nup_sampling1d_42 (UpSampling (None, 256, 16)           0         \n_________________________________________________________________\nconv1d_97 (Conv1D)           (None, 256, 32)           3616      \n_________________________________________________________________\nup_sampling1d_43 (UpSampling (None, 512, 32)           0         \n_________________________________________________________________\nconv1d_98 (Conv1D)           (None, 512, 64)           14400     \n_________________________________________________________________\nup_sampling1d_44 (UpSampling (None, 1024, 64)          0         \n_________________________________________________________________\nconv1d_99 (Conv1D)           (None, 1024, 4)           1796      \n=================================================================\nTotal params: 24,764\nTrainable params: 24,764\nNon-trainable params: 0\n_________________________________________________________________\n"
+      "_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nz_sampling (InputLayer)      (None, 6)                 0         \n_________________________________________________________________\nDense_after_sampling (Dense) (None, 512)               3584      \n_________________________________________________________________\nreshape_7 (Reshape)          (None, 64, 8)             0         \n_________________________________________________________________\nconv1d_59 (Conv1D)           (None, 64, 8)             456       \n_________________________________________________________________\nup_sampling1d_25 (UpSampling (None, 128, 8)            0         \n_________________________________________________________________\nconv1d_60 (Conv1D)           (None, 128, 16)           912       \n_________________________________________________________________\nup_sampling1d_26 (UpSampling (None, 256, 16)           0         \n_________________________________________________________________\nconv1d_61 (Conv1D)           (None, 256, 32)           3616      \n_________________________________________________________________\nup_sampling1d_27 (UpSampling (None, 512, 32)           0         \n_________________________________________________________________\nconv1d_62 (Conv1D)           (None, 512, 64)           14400     \n_________________________________________________________________\nup_sampling1d_28 (UpSampling (None, 1024, 64)          0         \n_________________________________________________________________\nconv1d_63 (Conv1D)           (None, 1024, 4)           1796      \n=================================================================\nTotal params: 24,764\nTrainable params: 24,764\nNon-trainable params: 0\n_________________________________________________________________\n"
      ]
     }
    ],
@@ -162,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -170,39 +163,37 @@
    "source": [
     "from keras.callbacks import ModelCheckpoint\n",
     "\n",
-    "# checkpointer = ModelCheckpoint(filepath=\"Models/Weights/weights.hdf5\", verbose=1,\n",
+    "# checkpointer = ModelCheckpoint(filepath=\"Models/Weights/Nominal_weights.hdf5\", verbose=1,\n",
     "#                                save_best_only=True)\n",
     "# vae.fit(x=trainX_nominal, epochs=100, \n",
     "#         batch_size=1024,\n",
     "#         validation_data=(valX_nominal,None),\n",
     "#         callbacks=[checkpointer])\n",
-    "vae.load_weights('Models/Weights/weights.hdf5')\n",
-    "\n",
-    "# vae.save(\"Models/Conv1d_VAE_comp.h5\")"
+    "vae.load_weights('Models/Weights/Nominal_weights.hdf5')\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 119,
+   "cell_type": "heading",
    "metadata": {},
-   "outputs": [],
+   "level": 1,
    "source": [
-    "import sys\n",
-    "\n",
-    "orig_stdout = sys.stdout\n",
-    "f = open('Logs/out.txt', 'w')\n",
-    "sys.stdout = f\n",
-    "print(encoder.summary())\n",
-    "print(decoder.summary())\n",
-    "sys.stdout = orig_stdout\n",
-    "f.close()\n"
+    "VISUALIZING RECONSTRUCTION ON FIRST RUN\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.23604478 -0.0450823   0.03794606 -0.01927547 -0.21131809  0.07257051]] [[-0.02129864 -0.00735012  0.02170739 -0.00085766 -0.05373051  0.09675059]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "nom_autoenc = vae.predict(trainX_nominal)\n",
@@ -212,30 +203,44 @@
     "plt.plot(boat_csv['Lon'][:1024], boat_csv['Lat'][:1024])\n",
     "plt.show()\n",
     "plt.plot(autoenc_df['Lon'], autoenc_df['Lat'])\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 1,
+   "source": [
+    "ENCODED ANALYSIS\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 (500, 6)\n"
+      "3 (300, 6)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 6\n"
      ]
     }
    ],
    "source": [
+    "import math\n",
+    "\n",
     "nom_enc = encoder.predict(trainX_nominal)\n",
     "print(len(nom_enc), nom_enc[0].shape)\n",
     "\n",
-    "def plot_enc_values():\n",
+    "def get_neuron_values():\n",
     "    neurons_m = []\n",
     "    neurons_var = []\n",
     "    for i in range(latent_dim):\n",
@@ -249,13 +254,18 @@
     "    return neurons_m, neurons_var\n",
     "\n",
     "\n",
-    "neurons_m, neurons_var = plot_enc_values()\n",
+    "neurons_m, neurons_var = get_neuron_values()\n",
     "\n",
     "\n",
-    "def check_disentanglement(neuron_index):\n",
-    "    neuron_avg = np.average(neurons_m[neuron_index])\n",
+    "def nominal_parameters():\n",
+    "    neuron_avg = np.average(neurons_m, axis=1)\n",
     "    \n",
-    "    neuron_var = np.average(neurons_var[neuron_index])\n"
+    "    neuron_var = np.average(neurons_var, axis=1)\n",
+    "\n",
+    "    return neuron_avg, neuron_var\n",
+    "\n",
+    "neuron_avg, neuron_var = nominal_parameters()\n",
+    "print(len(neuron_avg), len(neuron_var))\n"
    ]
   },
   {
@@ -263,7 +273,97 @@
    "metadata": {},
    "level": 1,
    "source": [
-    "VISUALIZATION\n",
+    "ANALYSIS OF ENCODING AND DECODING OF THE ANOMALOUS RUN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_difference():\n",
+    "    plt.plot(anom_data_encoding[0])\n",
+    "    plt.plot(neuron_avg)\n",
+    "    plt.title(\"MEAN\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "    plt.plot(anom_data_encoding[1])\n",
+    "    plt.plot(neuron_var)\n",
+    "    plt.title(\"STD\")\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "boat_anom_csv = pd.read_csv(\"Data/Boat_anom_sequence.csv\")\n",
+    "boat_anom_csv = boat_anom_csv.drop(columns=[\"Unnamed: 0\",\"Speed\", \"Acceleration\",\n",
+    "                                            \"M0C\", \"M1C\"])\n",
+    "anom_data_norm = scaler.fit_transform(boat_anom_csv)\n",
+    "anom_data_norm = np.reshape(anom_data_norm, (1, len(anom_data_norm), n_features))\n",
+    "anom_data_encoding = np.squeeze(encoder.predict(anom_data_norm))\n",
+    "\n",
+    "anom_means = anom_data_encoding[0]\n",
+    "anom_var = anom_data_encoding[1]\n",
+    "print(anom_means, anom_var)\n",
+    "\n",
+    "visualize_difference()\n"
+   ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 1,
+   "source": [
+    "SAMPLING FROM VALUES OF THE LATENT SPACE AND CHANGING ONLY ONE, \n",
+    "THEN CHECK THE RECONSTRUCTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_latent_sampled(sample_nom, sample_anom):\n",
+    "    plt.plot(sample_nom)    \n",
+    "    plt.plot(sample_anom)\n",
+    "    plt.title(\"SAMPLED DIFFERENCES\")\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def reconstruct_from_latent_vectors(latents):\n",
+    "    latents = np.reshape(latents, (1,len(latents)))\n",
+    "    run = decoder.predict(latents)\n",
+    "    run_df = pd.DataFrame(run[0], columns=boat_csv.columns)\n",
+    "    \n",
+    "    plt.plot(run_df[\"Lon\"], run_df[\"Lat\"])\n",
+    "    plt.show()\n",
+    "    \n",
+    "\n",
+    "epsilon = np.random.normal(0,1)\n",
+    "sample_nominal = neuron_avg + np.exp(0.5*neuron_var)*epsilon\n",
+    "sample_anomalous = anom_means + np.exp(0.5*anom_var)*epsilon\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "changes = np.linspace(0,6,50)\n",
+    "for i in changes:\n",
+    "    sample_nominal[2] = sample_anomalous[2]*i\n",
+    "    #visualize_latent_sampled(sample_nominal, sample_anomalous)\n",
+    "    reconstruct_from_latent_vectors(sample_nominal)\n",
+    "# reconstruct_from_latent_vectors(sample_anomalous)\n"
+   ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 1,
+   "source": [
+    "VISUALIZATION of ENCODED VALUES OF MEAN AND SIGMA\n",
     "\n"
    ]
   },
