--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,15 +373,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = create_nom_data()\n",
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
-    "for i in range(500):\n",
-    "    choice = np.random.choice([0,1], p=[0.1, 0.9])\n",
+    "for i in range(1):\n",
+    "    choice = np.random.choice([0,1], p=[1., 0.])\n",
     "    if choice == 0:\n",
     "        nom_list.append(1)\n",
     "        data = create_anom_data()\n",
@@ -395,13 +395,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df = df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
-    "label_df.to_csv(\"Data/Boat_nominal_data/Boat_mix_labels.csv\")"
+    "validation = False\n",
+    "anomalous = True\n",
+    "# if not validation:\n",
+    "#     df.to_csv(\"Data/Boat_nominal_data/Boat_nominal_sequences.csv\")\n",
+    "#     label_df.to_csv(\"Data/Boat_nominal_data/Boat_mix_labels.csv\")\n",
+    "# if validation:\n",
+    "#     df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_val_nom.csv\")\n",
+    "\n",
+    "if anomalous:\n",
+    "    df.to_csv(\"Data/Boat_anom_sequence.csv\")"
    ]
   },
   {
